objects/Web_Service_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Settings for Web Services
- Default Endpoints &amp; Other Parameters</description>
    <fields>
        <fullName>API_Key__c</fullName>
        <description>HBC Gateway API Key</description>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Url__c</fullName>
        <label>Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bay_Loyalty_GW_Endpoint__c</fullName>
        <description>Loyalty middleware gateway enpoint</description>
        <label>Bay Loyalty GW Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bay_Loyalty_UAD_Lookup_Endpoint__c</fullName>
        <label>Bay Loyalty UAD Lookup Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNS_Email_Search_Endpoint__c</fullName>
        <description>Relative endpoint for the email search API</description>
        <label>CNS Email Search Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNS_Get_Email_Body__c</fullName>
        <label>CNS Get Email Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNS_Send_Email_Endpoint__c</fullName>
        <description>Endpoint for the CNS Send Email API</description>
        <label>CNS Send Email Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Order_Endpoint__c</fullName>
        <description>OMS Cancel Order relative Endpoint</description>
        <label>Cancel Order Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Order_Endpoint__c</fullName>
        <description>OMS Create Order relative Endpoint</description>
        <label>Create Order Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Search_API_key__c</fullName>
        <label>Email Search API key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Order_Details_Endpoint__c</fullName>
        <description>OMS Get Order Details relative Endpoint</description>
        <label>Get Order Details Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Order_List_Endpoint__c</fullName>
        <description>OMS Get Order List Service relative Endpoint</description>
        <label>Get Order List Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPA_Gift_Card_Balance_Endpoint__c</fullName>
        <description>Relative endpoint for gift card balance check</description>
        <label>IPA Gift Card Balance Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Saks_Endpoint__c</fullName>
        <description>Relative endpoint for SaksFirst Loyalty API</description>
        <label>Loyalty Saks Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Order_Payment_Endpoint__c</fullName>
        <description>Relative endpoint for updating order payment information</description>
        <label>OMS Order Payment Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Order_Return_Endpoint__c</fullName>
        <description>Relative endpoint for OMS Return Fee API</description>
        <label>OMS Order Return Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Purchase_Order_Endpoint__c</fullName>
        <description>Relative Endpoint for VendorNet or other Purchase Order related external information</description>
        <inlineHelpText>Relative Endpoint for VendorNet or other Purchase Order related external information</inlineHelpText>
        <label>OMS Purchase Order Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_History_Endpoint__c</fullName>
        <description>OMS Order Line History Service relative Endpoint</description>
        <label>Order Line History Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPA_Get_Adjustment_Endpoint__c</fullName>
        <description>Sales Price Adjustment Calculator Relative Endpoint for getting an adjustment by ID</description>
        <label>SPA Get Adjustment Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPA_Get_Order_Adjustments_Endpoint__c</fullName>
        <description>Sales Price Adjustment Calculator Relative Endpoint for getting an adjustment by Order Number</description>
        <label>SPA Get Order Adjustments Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPA_Update_Adjustment_Endpoint__c</fullName>
        <description>Sales Price Adjustment Calculator Relative Endpoint for updating an adjustment by ID</description>
        <label>SPA Update Adjustment Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tokenex_API_Key__c</fullName>
        <description>TokenEx API Key for authenticating to tokenize API</description>
        <label>Tokenex API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tokenex_Endpoint__c</fullName>
        <description>Full TokenEx Endpoint</description>
        <label>Tokenex Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tokenex_ID__c</fullName>
        <description>TokenEx Client ID</description>
        <label>Tokenex ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tokenex_Token_Scheme__c</fullName>
        <description>Token Scheme used to encrypt data</description>
        <label>Tokenex Token Scheme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCID_Create_Endpoint__c</fullName>
        <description>UCID Create Service relative Endpoint</description>
        <label>UCID Create Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCID_Query_Endpoint__c</fullName>
        <description>UCID Query Service relative endpoint</description>
        <label>UCID Query Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCID_Update_Endpoint__c</fullName>
        <description>UCID Update Service relative endpoint</description>
        <label>UCID Update Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Order_Endpoint__c</fullName>
        <description>OMS Update Order relative Endpoint</description>
        <label>Update Order Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Web Service Settings</label>
</CustomObject>